test/spec_vectors/func/fail/module_32.wat
(module (func $type-value-num-vs-void (i32.const 0)))